Renamed classes. Added asteroidKey argument to layout XML. DAO methods updated. Created more TestAsteroid objects.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,8 +4,8 @@
 
     <data>
         <variable
-            name="viewModel"
-            type="com.royma.asteroidradar.main.MainViewModel" />
+            name="asteroidRadarViewModel"
+            type="com.royma.asteroidradar.main.AsteroidRadarViewModel" />
 
     </data>
 
