AsteroidListener class created. Variable added to list_item_asteroid.kt. AsteroidRadarAdapter class renamed. Signature updated to take in clickListener. CLICKLISTENER WORKING - TOAST CORRECTLY SHOWS ASTEROID ID!

--- a/app/src/main/res/layout/list_item_asteroid.xml
+++ b/app/src/main/res/layout/list_item_asteroid.xml
@@ -7,11 +7,15 @@
         <variable
             name="asteroid"
             type="com.royma.asteroidradar.Asteroid" />
+        <variable
+            name="clickListener"
+            type="com.royma.asteroidradar.main.AsteroidListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> clickListener.onClick(asteroid)}">
 
         <TextView
             android:id="@+id/asteroid_name_string"
