Cleaned up unnecessary code in AsteroidDetailFragment.kt. Passed argument changed in main_nav_graph.xml. Clicking list item now navigates to Detail fragment! (fragment loads blank data).

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -21,8 +21,8 @@
         tools:layout="@layout/fragment_detail">
 
         <argument
-            android:name="selectedAsteroid"
-            app:argType="com.royma.asteroidradar.Asteroid"/>
+            android:name="selectedAsteroidKey"
+            app:argType="long"/>
     </fragment>
 
 </navigation>
