Added 'detail' ViewModel & factory. Refactored various classes to pass Asteroid object instead of just ID. Tested filling 'close_approach_date' textView with data from the viewModel instead of Asteroid object - POPULATED SUCCESSFULLY!

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -21,8 +21,8 @@
         tools:layout="@layout/fragment_detail">
 
         <argument
-            android:name="selectedAsteroidKey"
-            app:argType="long"/>
+            android:name="selectedAsteroid"
+            app:argType="com.royma.asteroidradar.Asteroid"/>
     </fragment>
 
 </navigation>
