--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,10 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="asteroid"
             type="com.royma.asteroidradar.Asteroid" />
+
+        <variable
+            name="detailViewModel"
+            type="com.royma.asteroidradar.detail.AsteroidDetailViewModel" />
     </data>
 
 <!--TODO: Add content description to the views: Picture of the day (Use the title dynamically for this),-->
@@ -58,7 +61,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:text="@{asteroid.closeApproachData}"
+                        android:text="@{detailViewModel.selectedAsteroid.closeApproachData}"
                         android:textColor="@color/default_text_color"
                         tools:text="2020-02-01" />
                 </LinearLayout>
