--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ListItemTitle">
+        <item name="android:textColor">@color/default_text_color</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ListItemSubtitle">
+        <item name="android:textColor">@color/text_grey</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
