--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -31,6 +31,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
+                app:pictureOfDay="@{asteroidRadarViewModel.picOfDay}"
                 app:srcCompat="@drawable/placeholder_picture_of_day"/>
 
             <TextView
