Added AsteroidRepository.kt. Refactored project after 'domain' package creation. AndroidDatabaseTest.kt updated.

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -22,7 +22,7 @@
 
         <argument
             android:name="selectedAsteroid"
-            app:argType="com.royma.asteroidradar.Asteroid"/>
+            app:argType="com.royma.asteroidradar.domain.Asteroid"/>
     </fragment>
 
 </navigation>
