--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="asteroid"
-            type="com.royma.asteroidradar.Asteroid" />
+            type="com.royma.asteroidradar.domain.Asteroid" />
 
         <variable
             name="detailViewModel"
