--- a/app/src/main/res/layout/list_item_asteroid.xml
+++ b/app/src/main/res/layout/list_item_asteroid.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="asteroid"
-            type="com.royma.asteroidradar.Asteroid" />
+            type="com.royma.asteroidradar.domain.Asteroid" />
         <variable
             name="clickListener"
             type="com.royma.asteroidradar.main.AsteroidListener" />
