AsteroidAdapter.kt refactored to use domain 'Asteroid' instead of DatabaseAsteroid. Dropped 'asteroidId' from classes. Refactored local functions to require domain 'Asteroid' not DatabaseAsteroid. Refactored AsteroidDetailViewModel and AsteroidDetailViewModelFactory to use domain 'Asteroid'. APP WORKING FROM ROOM DATABASE!

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="asteroid"
-            type="com.royma.asteroidradar.database.DatabaseAsteroid" />
+            type="com.royma.asteroidradar.domain.Asteroid" />
 
         <variable
             name="detailViewModel"
