--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -22,7 +22,7 @@
 
         <argument
             android:name="selectedAsteroid"
-            app:argType="com.royma.asteroidradar.database.DatabaseAsteroid"/>
+            app:argType="com.royma.asteroidradar.domain.Asteroid"/>
     </fragment>
 
 </navigation>
