--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -32,7 +32,8 @@
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 app:pictureOfDay="@{asteroidRadarViewModel.picOfDay}"
-                app:srcCompat="@drawable/placeholder_picture_of_day"/>
+                app:srcCompat="@drawable/placeholder_picture_of_day"
+                android:contentDescription="@{asteroidRadarViewModel.picOfDay.title}" />
 
             <TextView
                 android:id="@+id/textView"
