--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.royma.asteroidradar.main.AsteroidRadarFragment"
-        android:label="fragment_main"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_main" >
         <action
             android:id="@+id/action_showDetail"
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.royma.asteroidradar.detail.AsteroidDetailFragment"
-        android:label="fragment_detail"
+        android:label="@string/details_label"
         tools:layout="@layout/fragment_detail">
 
         <argument
